==> hso-esk/emb6/trunk/target/mcu/samd20j18/target.c <==
#include "emb6.h"
#include "emb6_conf.h"
#include "board_conf.h"
#include "math.h"
#include "target.h"
#include "hwinit.h"
#include "bsp.h"
#include "stdio_serial.h"
#define 	LOGGER_ENABLE		LOGGER_HAL
#define 	LOGGER_SUBSYSTEM	"hal"
#include	"logger.h"

static void _hal_tcInit(void)
{
	//! [init_conf]
		struct rtc_count_config config_rtc_count;
		rtc_count_get_config_defaults(&config_rtc_count);
	//! [init_conf]

	//! [set_config]
		config_rtc_count.prescaler           = RTC_COUNT_PRESCALER_DIV_1;
		config_rtc_count.mode                = RTC_COUNT_MODE_16BIT;
		config_rtc_count.continuously_update = true;
	//! [set_config]
	//! [init_rtc]
		rtc_count_init(&rtc_instance, RTC, &config_rtc_count);
	//! [init_rtc]

	//! [period]
		rtc_count_set_period(&rtc_instance, 32);
	//! [period]

	//! [reg_callback]
		rtc_count_register_callback(
				&rtc_instance, _isr_tc_interrupt, RTC_COUNT_CALLBACK_OVERFLOW);
	//! [reg_callback]
	//! [en_callback]
		rtc_count_enable_callback(&rtc_instance, RTC_COUNT_CALLBACK_OVERFLOW);
	//! [en_callback]

	//! [enable]
		rtc_count_enable(&rtc_instance);
	//! [enable]
	}

int8_t hal_init (void)
{
	system_init();

	_hal_usartInit();
	_hal_wdtInit();
	_hal_tcInit();
	_hal_ledInit();
	delay_init();
	system_interrupt_enable_global();
	return 1;
}

uint8_t hal_extIntInit(en_targetExtInt_t e_intSource, pfn_intCallb_t pfn_intCallback)
{
	int8_t	c_ret = 0;

	if (pfn_intCallback != NULL) {
		switch (e_intSource) {
			case E_TARGET_RADIO_INT:
				//! [setup_init]
				//
				//! [conf_channel]
				//! [setup_1]
				extint_chan_get_config_defaults(&(radio_extInt.st_chan));
				//! [setup_1]

				//! [setup_2]
				radio_extInt.st_chan.gpio_pin           = radio_extInt.l_pin; //EXT1_IRQ_PIN;
				radio_extInt.st_chan.gpio_pin_mux       = radio_extInt.l_pinMux;//MUX_PB04A_EIC_EXTINT4;
				radio_extInt.st_chan.gpio_pin_pull      = radio_extInt.c_pinPull;//EXTINT_PULL_DOWN;
				radio_extInt.st_chan.detection_criteria = radio_extInt.c_detCrit;//EXTINT_DETECT_RISING;
				//! [setup_2]

				//! [setup_3]
				extint_chan_set_config((uint8_t)radio_extInt.l_line, &(radio_extInt.st_chan));
				//! [setup_3]

				_radio_callback = pfn_intCallback;
				//! [setup_4]
				extint_register_callback((extint_callback_t)_isr_radio_callback, (uint8_t)radio_extInt.l_line,
						EXTINT_CALLBACK_TYPE_DETECT);
				//! [setup_4]
				//! [setup_5]
				extint_chan_enable_callback((uint8_t)radio_extInt.l_line, //EXT1_IRQ_INPUT,
						EXTINT_CALLBACK_TYPE_DETECT);
				//! [setup_6]

				//! [conf_channel]
				//! [setup_init]
				system_interrupt_enable_global();
				c_ret = 1;
				break;
			case E_TARGET_USART_INT:
				break;
			default:
				break;
		}
	}
	return c_ret;

}

void * 	hal_ctrlPinInit(en_targetExtPin_t e_pinType)
{
	struct port_config pin_conf;
	port_get_config_defaults(&pin_conf);
	pinDesc_t * p_pin = NULL;

	/* Configure SPI interface */
	port_get_config_defaults(&pin_conf);

	switch (e_pinType){
		case E_TARGET_RADIO_RST:
			pin_conf.direction  = PORT_PIN_DIR_OUTPUT;
			port_pin_set_config(st_rst, &pin_conf);	//	RST_PIN
			port_pin_set_output_level(st_rst, true);	//	RST_PIN
			p_pin = &st_rst;
			break;
		case E_TARGET_RADIO_SLPTR:
			pin_conf.direction  = PORT_PIN_DIR_OUTPUT;
			port_pin_set_config(st_slp_tr, &pin_conf);	//	SLP_PIN
			port_pin_set_output_level(st_slp_tr, true);	//	SLP_PIN
			p_pin = &st_slp_tr;
			break;
		default:
			free(p_pin);
			break;
	}

	return p_pin;
}

void	hal_pinSet(void * p_pin)
{
	hal_enterCritical();
	port_pin_set_output_level(*((pinDesc_t *)p_pin), true);
	hal_exitCritical();
}

void	hal_pinClr(void * p_pin)
{
	hal_enterCritical();
	port_pin_set_output_level(*((pinDesc_t *)p_pin), false);
	hal_exitCritical();
}

uint8_t	hal_pinGet(void * p_pin)
{
	return (uint8_t)port_pin_get_output_level(*((pinDesc_t *)p_pin));
}

void * 	hal_spiInit(void)
{
	//! [slave_config]
		struct spi_slave_inst_config st_slaveDevConf;
	//! [slave_config]
	//! [master_config]
		struct spi_config st_masterConf;
	//! [master_config]

		/* Configure and initialize software device instance of peripheral slave */
	//! [slave_conf_defaults]
		spi_slave_inst_get_config_defaults(&st_slaveDevConf);
	//! [slave_conf_defaults]
	//! [ss_pin]
		st_slaveDevConf.ss_pin = st_ss;
	//! [ss_pin]
	//! [slave_init]
		spi_attach_slave(&st_spi, &st_slaveDevConf);
	//! [slave_init]
		/* Configure, initialize and enable SERCOM SPI module */
	//! [conf_defaults]
		spi_get_config_defaults(&st_masterConf);
	//! [conf_defaults]
	//! [mux_setting]
		st_masterConf.mux_setting = SAMD20_SPI0_SERCOM_MUX_SETTING;
	//! [mux_setting]
		/* Configure pad 0 for data in */
	//! [di]
		st_masterConf.pinmux_pad0 = SAMD20_SPI0_SERCOM_PMUX0;
	//! [di]
		/* Configure pad 1 as unused */
	//! [ss]
		st_masterConf.pinmux_pad1 = PINMUX_UNUSED;
	//! [ss]
		/* Configure pad 2 for data out */
	//! [do]
		st_masterConf.pinmux_pad2 = SAMD20_SPI0_SERCOM_PMUX2;
	//! [do]
		/* Configure pad 3 for SCK */
	//! [sck]
		st_masterConf.pinmux_pad3 = SAMD20_SPI0_SERCOM_PMUX3;
	//! [sck]
	//! [init]
		spi_init(&st_masterInst, SAMD20_SPI0_SERCOM, &st_masterConf);
	//! [init]

	//! [enable]
		spi_enable(&st_masterInst);
	//! [enable]

    return ((void *)&st_spi);
}

uint8_t hal_spiSlaveSel(void * p_spi, bool action)
{
    if (p_spi == NULL) {
//        LOG_ERR("SPI was not initialized!");
        return 0;
    }
	if (action) {
		//! [select_slave]
		hal_enterCritical();
		spi_select_slave(&st_masterInst, (spiDesc_t *)p_spi, true);
		//! [select_slave]
	}
	else {
		//! [deselect_slave]
		spi_select_slave(&st_masterInst, (spiDesc_t *)p_spi, false);
		hal_exitCritical();
		//! [deselect_slave]
	}
	return 1;
}

uint8_t hal_spiRead(uint8_t * p_reg, uint16_t i_length)
{
	spi_read_buffer_wait(&st_masterInst,p_reg,i_length,0);
	return *p_reg;
}

void	hal_spiWrite(uint8_t * c_value, uint16_t i_length)
{
	if (spi_write_buffer_wait(&st_masterInst,c_value,i_length) != STATUS_OK)
//		LOG_ERR("%s\n\r","SPI write error!");
		;
}
